# Mathpp

./: .gitmodules  CMakeLists.txt  README.md
docs/: BENCHMARKS.md
libs/: mathpp.cppm
libs/basic/: CMakeLists.txt  basic.cppm
libs/basic/modules/: abs.cppm  bit.cppm  ceil.cppm  compare.cppm  factorial.cppm  floor.cppm  fma.cppm  ilogb.cppm  ldexp.cppm  pow.cppm  trunc.cppm
libs/common/: CMakeLists.txt  common.cppm
libs/common/include/Mathpp/: macros.hpp
libs/common/modules/: abs.cppm  bit.cppm  check.cppm  compare.cppm  floating_point.cppm  traits.cppm
libs/trig/: CMakeLists.txt  trig.cppm
perf_val/: CMakeLists.txt
perf_val/basic/: CMakeLists.txt
perf_val/basic/abs/: CMakeLists.txt  pv_abs.cpp
perf_val/basic/ceil/: CMakeLists.txt  pv_ceil.cpp
perf_val/basic/floor/: CMakeLists.txt  pv_floor.cpp
perf_val/basic/ilogb/: CMakeLists.txt  pv_ilogb.cpp
perf_val/basic/ldexp/: CMakeLists.txt  pv_ldexp.cpp
perf_val/basic/trunc/: CMakeLists.txt  pv_trunc.cpp
perf_val/mathpp_pv_utils/: CMakeLists.txt  mathpp_pv_utils.cppm
tools/: gen_perf_val.py
validation/: CMakeLists.txt
validation/basic/: CMakeLists.txt
validation/basic/abs/: CMakeLists.txt  test_abs.cpp
validation/basic/bit/: test_bit.cpp
validation/basic/ceil/: CMakeLists.txt  test_ceil.cpp
validation/basic/compare/: CMakeLists.txt  test_compare.cpp
validation/basic/factorial/: CMakeLists.txt  test_factorial.cpp
validation/basic/floor/: CMakeLists.txt  test_floor.cpp
validation/basic/ilogb/: CMakeLists.txt  test_ilogb.cpp
validation/basic/ldexp/: CMakeLists.txt  test_ldexp.cpp
validation/basic/pow/: CMakeLists.txt  test_pow.cpp
validation/basic/trunc/: CMakeLists.txt  test_trunc.cpp
validation/common/: CMakeLists.txt
validation/common/abs/: test_abs.cpp
validation/common/bit/: CMakeLists.txt  test_bit.cpp
validation/common/check/: CMakeLists.txt  test_check.cpp
validation/common/compare/: test_compare.cpp
validation/common/traits/: CMakeLists.txt  test_traits.cpp
